Remove about again. Idk what is going on

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,5 +1,5 @@
-<div class="remove-container container-block">
+<!--<div class="remove-container container-block">
   <h2 class="container-block-title">
     Keith
   </h2>
-</div><!--//About-->
+</div>//About-->
