--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -239,11 +239,13 @@ p {
     .item {
         margin-bottom: 15px;
         overflow: hidden;
+        font-size: 1.2em;
     }
     .level-title {
         font-size: 14px;
         margin-top: 0;
         margin-bottom: 12px;
+        font-size: 1.2em;
     }
     .level-bar {
         height: 12px;
