--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -253,7 +253,7 @@ p {
     }
     .level-bar-inner {
         height: 12px;
-        background: lighten($theme-color, 15%);
+        background: #3498DB
     }
 }
 
