--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,6 +1,6 @@
 /* ======= Base ======= */
 body {
-    font-family: 'Lato', sans-serif;
+    font-family: 'Roboto', sans-serif;
     color: $text-color-secondary;
     background: $smoky-white;
     font-size: 14px;
@@ -239,13 +239,11 @@ p {
     .item {
         margin-bottom: 15px;
         overflow: hidden;
-        font-size: 1.2em;
     }
     .level-title {
         font-size: 14px;
         margin-top: 0;
         margin-bottom: 12px;
-        font-size: 1.2em;
     }
     .level-bar {
         height: 12px;
@@ -253,7 +251,7 @@ p {
     }
     .level-bar-inner {
         height: 12px;
-        background: #3498DB
+        background: lighten($theme-color, 15%);
     }
 }
 
