--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -332,13 +332,13 @@ layout: compress
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="js/scripts.min.js"></script>
 
-  <!--<div class="wrapper">
-    {% include sidebar.html %}
+  <div class="wrapper">
+   <!-- {% include sidebar.html %}-->
 
     <div class="main-wrapper">
         {{ content }}
     </div>
-  </div>-->
+  </div>
 
   {% include footer.html %}
 
