--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,20 +7,6 @@ layout: compress
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->  
 {% include head.html %}
 
-<!--<body>
-  <div class="wrapper">
-    {% include sidebar.html %}
-
-    <div class="main-wrapper">
-        {{ content }}
-    </div>
-  </div>
-
-  {% include footer.html %}
-
-{% include scripts.html %}
-</body>-->
-
 <body>
     <div id="mobile-menu-open" class="shadow-large">
         <i class="fa fa-bars" aria-hidden="true"></i>
@@ -287,9 +273,9 @@ layout: compress
             <li>Iris</li>
         </ul>
     </div>
-     End #skills -->
+     End #skills 
 
-    {% include skills.html %}
+    {% include skills.html %}-->
 
     <div id="contact">
         <h2>Get in Touch</h2>
