--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -248,11 +248,11 @@ layout: compress
       </div>
   </div>
 
-  <div class="wrapper">
+  {{/* <div class="wrapper"> */}}
     <div class="main-wrapper">
         {{ content }}
     </div>
-  </div>
+  {{/* </div> */}}
 
   {% include footer.html %}
 
