--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 ---
-layout: compress
+layout: default
 ---
 <!DOCTYPE html>
 <!--[if IE 8]> <html lang="en" class="ie8"> <![endif]-->  
@@ -248,53 +248,59 @@ layout: compress
       </div>
   </div>
 
-  <div id="contact">
-      <h2>Get in Touch</h2>
-      <div id="contact-form">
-          <form method="POST" action="https://formspree.io/fongzhizhong@gmail.com">
-              <input type="hidden" name="_subject" value="Contact request from personal website" />
-              <input type="email" name="_replyto" placeholder="Your email" required>
-              <textarea name="message" placeholder="Your message" required></textarea>
-              <button type="submit">Send</button>
-          </form>
-      </div>
-      <!-- End #contact-form -->
+  {{/* <div class="wrapper"> */}}
+    <div class="main-wrapper">
+        {{ content }}
     </div>
-    <!-- End #contact -->
+  {{/* </div> */}}
 
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-5 copyright">
-                    <p>
-                        Copyright &copy; 2018 Keith Fong
-                    </p>
-                </div>
-                <div class="col-sm-2 top">
-                    <span id="to-top">
-                        <i class="fa fa-chevron-up" aria-hidden="true"></i>
-                    </span>
-                </div>
-                <div class="col-sm-5 social">
-                    <ul>
-                        <li>
-                            <a href="https://github.com/Lexzt" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://www.linkedin.com/in/fong-keith" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://www.facebook.com/fong.keith.7" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </footer>
-    <!-- End footer -->
+  <div id="contact">
+    <h2>Get in Touch</h2>
+    <div id="contact-form">
+        <form method="POST" action="https://formspree.io/fongzhizhong@gmail.com">
+            <input type="hidden" name="_subject" value="Contact request from personal website" />
+            <input type="email" name="_replyto" placeholder="Your email" required>
+            <textarea name="message" placeholder="Your message" required></textarea>
+            <button type="submit">Send</button>
+        </form>
+    </div>
+    <!-- End #contact-form -->
+  </div>
+  <!-- End #contact -->
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="js/scripts.min.js"></script>
+  <footer>
+      <div class="container">
+          <div class="row">
+              <div class="col-sm-5 copyright">
+                  <p>
+                      Copyright &copy; 2018 Keith Fong
+                  </p>
+              </div>
+              <div class="col-sm-2 top">
+                  <span id="to-top">
+                      <i class="fa fa-chevron-up" aria-hidden="true"></i>
+                  </span>
+              </div>
+              <div class="col-sm-5 social">
+                  <ul>
+                      <li>
+                          <a href="https://github.com/Lexzt" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                      </li>
+                      <li>
+                          <a href="https://www.linkedin.com/in/fong-keith" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                      </li>
+                      <li>
+                          <a href="https://www.facebook.com/fong.keith.7" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                      </li>
+                  </ul>
+              </div>
+          </div>
+      </div>
+  </footer>
+  <!-- End footer -->
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="js/scripts.min.js"></script>
 
 {% include scripts.html %}
 </body>
