--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,3 +1,12 @@
+.wrapper {
+    background:$theme-color;
+    max-width: 1000px;
+    margin: 0 auto;
+    position: relative;
+    padding: 30px;
+    @include box-shadow(0px 2px 4px rgba(0,0,0,0.1));
+}
+
 .skillset {
     .item {
         margin-bottom: 15px;
@@ -17,9 +26,6 @@
         background: lighten($theme-color, 15%);
     }
 }
-
-
-
 
 .footer {
     padding-top: 30px;
