--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,11 +1,21 @@
-.wrapper {
-    background:$theme-color;
-    max-width: 1000px;
-    margin: 0 auto;
-    position: relative;
-    padding: 30px;
-    @include box-shadow(0px 2px 4px rgba(0,0,0,0.1));
+.main-wrapper {
+    background: #fff;
+    padding: 60px;
+    padding-right: 340px;
+    .section-title {
+        text-transform: uppercase;
+        font-size: 20px;
+        font-weight: 500;
+        color: darken($theme-color, 15%);
+        position: relative;
+        margin-top: 0;
+        margin-bottom: 20px;
+    }
+    .section {
+        margin-bottom: 60px;
+    }
 }
+
 
 .skillset {
     .item {
@@ -26,6 +36,9 @@
         background: lighten($theme-color, 15%);
     }
 }
+
+
+
 
 .footer {
     padding-top: 30px;
