--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -248,6 +248,8 @@ layout: compress
       </div>
   </div>
 
+hello world
+
   <div class="wrapper">
     <div class="main-wrapper">
         {{ content }}
