--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -16,6 +16,13 @@
     }
 }
 
+.wrapper {
+    background:$theme-color;
+    max-width: 1000px;
+    margin: 0 auto;
+    position: relative;
+    @include box-shadow(0px 2px 4px rgba(0,0,0,0.1));
+}
 
 .skillset {
     .item {
