--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -2,7 +2,7 @@
     background: #fff;
     padding: 60px;
     padding-right: 340px;
-    padding-left: 160px
+    padding-left: 160px;
     .section-title {
         text-transform: uppercase;
         font-size: 20px;
