--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,6 +1,7 @@
 .main-wrapper {
     background: #fff;
-    padding: 60px;
+    padding-top: 60px;
+    padding-bottom: 60px;
     padding-right: 160px;
     padding-left: 300px;
     .section-title {
