--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -248,7 +248,7 @@ layout: compress
       </div>
   </div>
 
-hello is this updating
+hello is this updating 2
   <div class="wrapper">
     <div class="main-wrapper">
         {{ content }}
