--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,27 +1,7 @@
 .main-wrapper {
     background: #fff;
-    padding-top: 60px;
-    padding-bottom: 60px;
-    padding-left: 180px;
-    .section-title {
-        text-transform: uppercase;
-        font-size: 20px;
-        font-weight: 500;
-        position: relative;
-        margin-top: 0;
-        margin-bottom: 20px;
-    }
-    .section {
-        margin-bottom: 60px;
-    }
-}
-
-.wrapper {
-    background:$theme-color;
-    max-width: 1000px;
-    margin: 0 auto;
-    position: relative;
-    @include box-shadow(0px 2px 4px rgba(0,0,0,0.1));
+    padding: 60px;
+    padding-right: 340px;
 }
 
 .skillset {
