--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,7 +1,9 @@
 .main-wrapper {
     background: #fff;
-    padding: 60px;
-    padding-right: 340px;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    padding-left: 120px;
+    padding-right: 120px;
 }
 
 .skillset {
