--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,9 +1,6 @@
 .main-wrapper {
     background: #fff;
-    padding-top: 60px;
-    padding-bottom: 60px;
-    padding-left: 180px;
-    padding-right: 120px;
+    margin: 0 auto 30px auto;
 }
 
 .skillset {
