--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -3,6 +3,12 @@
     margin: 0 auto 30px auto;
 }
 
+.wrapper {
+    max-width: 1000px;
+    margin: 0 auto;
+    position: relative;
+}
+
 .skillset {
     .item {
         margin-bottom: 15px;
