--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,12 +1,8 @@
 .main-wrapper {
     background: #fff;
-    margin: 0 auto 30px auto;
-}
-
-.wrapper {
-    max-width: 1000px;
-    margin: 0 auto;
-    position: relative;
+    padding: 30px;
+    padding-right: 200px;
+    padding-left: 200px;
 }
 
 .skillset {
