--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -248,6 +248,7 @@ layout: compress
       </div>
   </div>
 
+  <h2 class="heading">Skills</h2>
   <div class="wrapper">
     <div class="main-wrapper">
         {{ content }}
@@ -255,8 +256,6 @@ layout: compress
   </div>
 
   <div id="contact">
-hello is this updating 9
-
     <h2>Get in Touch</h2>
     <div id="contact-form">
         <form method="POST" action="https://formspree.io/fongzhizhong@gmail.com">
