--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -2,13 +2,7 @@
 {% if skills %}
 <section class="skills-section section">
 
-  <h2 class="section-title">
-    <span class="fa-stack fa-xs">
-      <i class="fas fa-circle fa-stack-2x"></i>
-      <i class="fas fa-wrench fa-stack-1x fa-inverse"></i>
-    </span>
-    {{ skills.title }}
-  </h2>
+  <h2 class="heading">Skills & Proficiency</h2>
 
   <div class="skillset">
 
