--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -2,9 +2,10 @@
 {% if skills %}
 <section class="skills-section section">
 
-  <br><br>
-  <h2 class="heading">Skills & Proficiency</h2>
-
+  <div id = "skills">
+    <h2 class="heading">Skills & Proficiency</h2>
+  </div>
+  
   <div class="skillset">
 
     {% for skill in skills.toolset %}
