--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -2,10 +2,10 @@
 {% if skills %}
 <section class="skills-section section">
 
-  <div id = "skills">
+  <div id = "keithskills">
     <h2 class="heading">Skills & Proficiency</h2>
   </div>
-  
+
   <div class="skillset">
 
     {% for skill in skills.toolset %}
