--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -722,6 +722,10 @@ footer {
     }
 }
 
+#keithskills {
+    text-align: center;
+}
+
 /*
     -------------------------------
     ----- 10. Contact Styles -----
