--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -2,7 +2,7 @@
 {% if skills %}
 <section class="skills-section section">
 
-  <div id="education">
+  <div id="keithskills">
     <h2 class="heading">Skills & Proficiency</h2>
   </div>
 
