--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -720,12 +720,13 @@ footer {
         cursor: default;
         font-size: 1.2em;
     }
+
+    keithskills {
+        padding: 30px 15px 20px 15px;
+        text-align: center;
+    }
 }
 
-.keithskills {
-    padding: 30px 15px 20px 15px;
-    text-align: center;
-}
 
 /*
     -------------------------------
