--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -3,6 +3,7 @@
     padding: 30px;
     padding-right: 200px;
     padding-left: 200px;
+    margin-bottom: 30px;
 }
 
 .skillset {
@@ -24,8 +25,6 @@
         background: lighten($theme-color, 15%);
     }
 }
-
-
 
 
 .footer {
