--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -695,11 +695,11 @@ footer {
 */
 
 #skills {
-    padding: 50px 15px;
     text-align: center;
 
     h2 {
         color: $heading;
+        margin-bottom: 30px;
     }
 
     ul {
