--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -3,7 +3,7 @@
 <section class="skills-section section">
 
   <div id="skills">
-    <h2 class="heading">Skills & Proficiency</h2>
+    <h2 class="headingskills">Skills & Proficiency</h2>
   </div>
 
   <div class="skillset">
