--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -5,6 +5,34 @@
     margin-bottom: 70px;
 }
 
+.skillskeith{
+    text-align: center;
+    padding-top:50px;
+    padding-left:15px;
+    padding-right:15px;
+
+    h2 {
+        color: $heading;
+    }
+
+    ul {
+        display: block;
+        margin: 0 auto;
+        padding: 0;
+        max-width: 800px;
+    }
+
+    li {
+        display: inline-block;
+        margin: 7px;
+        padding: 5px 10px;
+        color: $heading;
+        background: darken($background-alt, 5%);
+        list-style: none;
+        cursor: default;
+        font-size: 1.2em;
+    }
+
 .skillset {
     .item {
         margin-bottom: 15px;
