--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -2,7 +2,7 @@
 {% if skills %}
 <section class="skills-section section">
 
-  <div class="skillskeith">
+  <div class="heading">
     <h2 class="headingskills">Skills & Proficiency</h2>
   </div>
 
