--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -1034,7 +1034,7 @@ footer {
     }
     .level-bar-inner {
         height: 12px;
-        background: lighten($theme-color, 15%);
+        background: #3498DB
     }
 }
 
