--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -133,7 +133,7 @@ layout: compress
   <!-- End #experience -->
 
   <div id="education">
-      <h2 class="heading">Education</h2>
+      <h2 class="headingedu">Education</h2>
       <div class="education-block">
           <h3>National University of Singapore</h3>
           <span class="education-date">Aug 2017 - Present</span>
