--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -95,7 +95,7 @@ layout: compress
   <!-- End #about -->
 
   <div id="experience" class="background-alt">
-      <h2 class="heading">Experience</h2>
+      <h2 class="headingedu">Experience</h2>
       <div id="experience-timeline">
           <div data-date="June 2017 – Aug 2017">
               <h3>Anacle Systems</h3>
@@ -133,7 +133,7 @@ layout: compress
   <!-- End #experience -->
 
   <div id="education">
-      <h2 class="headingedu">Education</h2>
+      <h2 class="heading">Education</h2>
       <div class="education-block">
           <h3>National University of Singapore</h3>
           <span class="education-date">Aug 2017 - Present</span>
