--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -53,7 +53,7 @@ $background-alt: #f2f2f5;
     }
     .level-bar-inner {
         height: 12px;
-        background: lighten($theme-color, 15%);
+        background: #3498DB
     }
 }
 
